@@ -56,6 +56,10 @@ affected by this, as SGI stopped supporting IRIX in December 2013.
 
 * Changes in Emacs 25.2
 
+---
+** `find-library' now takes a prefix argument to pop to a different
+window.
+
 ** `find-library', `help-function-def' and `help-variable-def' now run
 `find-function-after-hook'.
 
